# gitlab-monitor

./: CMakeLists.txt  constants.h  main.cpp  readme.md
components/: ApplicationWidget.cpp  ApplicationWidget.h  BodyWidget.cpp  BodyWidget.h  ConfigurationWindow.cpp  ConfigurationWindow.h  ContextMenu.cpp  ContextMenu.h  ContextMenuButton.cpp  ContextMenuButton.h  HeaderWidget.cpp  HeaderWidget.h  IssueInputWidget.cpp  IssueInputWidget.h  IssueInputWindow.cpp  IssueInputWindow.h  IssueWidget.cpp  IssueWidget.h  IssuesListWidget.cpp  IssuesListWidget.h  LoadableContentWidget.cpp  LoadableContentWidget.h  LoadingIndicator.cpp  LoadingIndicator.h  ModalManager.cpp  ModalManager.h  ProjectWidget.cpp  ProjectWidget.h  ProjectsListWidget.cpp  ProjectsListWidget.h  ScrollArea.cpp  ScrollArea.h  ScrollBar.cpp  ScrollBar.h  SystemTrayIcon.cpp  SystemTrayIcon.h  WelcomeWidget.cpp  WelcomeWidget.h
models/: BaseModel.cpp  BaseModel.h  Group.cpp  Group.h  Issue.cpp  Issue.h  Project.cpp  Project.h  User.cpp  User.h
network/: NetworkManager.cpp  NetworkManager.h  NetworkResponse.cpp  NetworkResponse.h  ResponseStatus.h  ServiceMediator.cpp  ServiceMediator.h
resources/: resources.qrc
utilities/: ColorPalette.h  Configuration.cpp  Configuration.h  DarkTheme.h  DataStore.cpp  DataStore.h  GuiManager.cpp  GuiManager.h  KeyStore.cpp  KeyStore.h  LightTheme.h  LogService.cpp  LogService.h  NotificationService.cpp  NotificationService.h  NotificationWidget.cpp  NotificationWidget.h  Theme.h
